--- a/web/index.html
+++ b/web/index.html
@@ -10,11 +10,11 @@
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="upoint_web" />
+    <meta name="apple-mobile-web-app-title" content="UPoint" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="launcher_icon.png" />
 
     <title>upoint_web</title>
     <link rel="manifest" href="manifest.json" />
